--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -92,6 +92,10 @@ main section.categories-show {
           background-color: rgba(0, 130, 29, 0.7);
           color: white;
         }
+        .btn.out {
+          background-color: rgb(216, 90, 90);
+          color: white;
+         }
       }
     }
   }
