--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,16 @@ form.button_to {
 .text-danger {
   color: #f38792 !important;
 }
+
+.email-confirm,
+.order-summary {
+  flex: auto;
+  display: flex;
+  justify-content: center;
+} 
+
+.continue-shopping {
+  flex: auto;
+  display: flex;
+  justify-content: center;
+}
