--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,3 +124,10 @@ form.button_to {
   display: flex;
   justify-content: center;
 }
+
+.signed-in {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.4em;
+  color:#f38792;
+}
